Fix scrolling problem on Safari (#230)
Fix tiles jumping for some font settings

--- a/css/main.less
+++ b/css/main.less
@@ -2195,7 +2195,7 @@ form {
             display: block;
             /*           color: @fib-select-value-font-color;*/
             font-size: 18px;
-            
+
             &.default {
                 font-size: 14px;
                 opacity: 0.7;
@@ -2723,6 +2723,7 @@ form {
 .sections-list {
     list-style-type: none;
     text-align: center;
+    font-size: 0px; /*fix to remove extra spaces*/
 }
 
 .section-image-wrapper {
@@ -3873,13 +3874,16 @@ form {
     }
 
     .tree-of-content-container {
-        position: fixed;
+        position: fixed;        
         top: 0;
         bottom: 0;
         width: 300px;
         left: -300px;
         transition: left 0.2s ease-out;
         z-index: 100;
+        /*fix for block jumping with iframe on the page*/
+        backface-visibility: hidden; 
+        transform: translateZ(0px);
 
         &.expanded {
             left: 0px;
@@ -4134,31 +4138,6 @@ form {
 }
 
 @media (max-width: 820px) {
-    .overall-progress-block {
-        width: 180px;
-
-        & .overall-progress-wrapper,
-        & .course-action-block {
-            display: inline-block;
-            margin-bottom: 25px;
-            text-align: center;
-        }
-    }
-
-    .course-action-block.intro {
-        display: table-row;
-        text-align: center;
-    }
-
-    .result-btn-holder .button {
-        display: block;
-        margin: 20px auto;
-
-        &:first-child, &:last-child {
-            margin-right: auto;
-        }
-    }
-
     .tree-of-content-panel {
         & ~ .header .header-items-holder-wrapper,
         & ~ .content-container {
@@ -4250,6 +4229,33 @@ form {
     }
 }
 
+@media(max-width: 768px) {
+    .overall-progress-block {
+        width: 180px;
+
+        & .overall-progress-wrapper,
+        & .course-action-block {
+            display: inline-block;
+            margin-bottom: 25px;
+            text-align: center;
+        }
+    }
+
+    .course-action-block.intro {
+        display: table-row;
+        text-align: center;
+    }
+
+    .result-btn-holder .button {
+        display: block;
+        margin: 20px auto;
+
+        &:first-child, &:last-child {
+            margin-right: auto;
+        }
+    }
+}
+
 @media (max-width: 640px) {
     .tree-of-content-panel {
         .tree-of-content-container {
@@ -4259,6 +4265,7 @@ form {
 
                     .tree-of-content-section-item {
                         .tree-of-content-section-title-wrapper {
+                            margin: 0px;
                             padding: 15px 0px;
                         }
                     }
